# tirskbot

./: README.md  bot.py  launch.sh  pyproject.toml
